tests/programs/taint/a4-test-cases/pass/taint_flow_sensitive_pass2.rice
#[secure]
fn secure() -> int {
  0 
}

fn main() {
  let t = secure() in
  t := 1;
  println(int_to_string(t))  
}