tests/programs/taint/a4-test-cases/fail/taint_control_basic_fail.rice
#[secure]
fn secure() -> int {
  0 
}

fn main() {
  let p = secure() in  
  let n = if p == 0 {
    0
  } else {
    1
  } in
  println(int_to_string(n))
}